# apidocs

./: .gitignore  Dockerfile  Dockerfile-postgres  README.md  config.json  docker-compose-dev.yml  docker-compose.yml  dockerfile.dev  install_tree_sitter_languages.sh  package-lock.json  pyproject.toml
backend/: main.py
backend/api/: help.py  routes.py
backend/app/: ai_engine.py  analyze_repo.py  custom_docs.py  doc_generator.py  performance_analyzer.py  security_analyzer.py  test_generator.py
backend/helpers/: code_chunker.py  identify_apis.py  tree_sitter_utils copy.py  tree_sitter_utils.py
examples/: example_analyze_repo.py
examples/outputs/: api_spec_fastapi-blog.json  api_spec_fastapi_app.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/examples/outputs/: api_spec_DogeAPI.json  api_spec_coronavirus-tg-api.json  api_spec_fastapi-blog.json  api_spec_flask_app.json  api_spec_typescript_app.json
frontend/src/: App.jsx  index.css
frontend/src/pages/DocsPage/: DocsGeneration.jsx  apiUsage.jsx  documentation.jsx  header.jsx  sidebar.jsx  specification.jsx
nginx-conf/: init.nginx.conf  nginx.conf
sample_repos/express_app/: express.js
sample_repos/fastapi_app/: main.py
sample_repos/flask_app/: main.py
sample_repos/typescript_app/: App.tsx
static/: DogeAPI.json
